unpackaged/main/default/objects/FPC_Proceeds__c/FPC_Proceeds__c.object-meta.xml
<CustomObject>
    <description>Cash in for a given lease.</description>
    <label>Proceeds</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Proceeds ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proceeds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>