unpackaged/main/default/objects/FPC_Proceeds__c/fields/Clawback__c.field-meta.xml
<CustomField>
    <fullName>Clawback__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if commission is a clawback</description>
    <inlineHelpText>Indicates if commission is a clawback</inlineHelpText>
    <label>Clawback</label>
    <type>Checkbox</type>
</CustomField>