unpackaged/main/default/objects/FPC_Proceeds__c/fields/Clawback_Paycheck_2__c.field-meta.xml
<CustomField>
    <fullName>Clawback_Paycheck_2__c</fullName>
    <description>Indicates the paycheck that a rep's commission clawback will be taken from</description>
    <inlineHelpText>Indicates the paycheck that a rep's commission clawback will be taken from</inlineHelpText>
    <label>Clawback Paycheck 2</label>
    <type>Date</type>
</CustomField>