unpackaged/main/default/objects/FPC_Proceeds__c/fields/Clawback_Received__c.field-meta.xml
<CustomField>
    <fullName>Clawback_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates Clawback was received from Broker</description>
    <inlineHelpText>Indicates Clawback was received from Broker</inlineHelpText>
    <label>Clawback Received</label>
    <type>Checkbox</type>
</CustomField>