unpackaged/main/default/objects/FPC_Proceeds__c/fields/Clawback_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Clawback_Requested_Date__c</fullName>
    <description>Date Clawback was requested from Broker</description>
    <inlineHelpText>Date Clawback was requested from Broker</inlineHelpText>
    <label>Clawback Requested - Date</label>
    <type>Date</type>
</CustomField>