unpackaged/main/default/objects/FPC_Proceeds__c/fields/External_Clawback_Repaid__c.field-meta.xml
<CustomField>
    <fullName>External_Clawback_Repaid__c</fullName>
    <description>Date commission was paid back to external lender</description>
    <inlineHelpText>Date commission was paid back to external lender</inlineHelpText>
    <label>External - Clawback Repaid</label>
    <type>Date</type>
</CustomField>