unpackaged/main/default/objects/FPC_Proceeds__c/fields/Paycheck_1_Amount__c.field-meta.xml
<CustomField>
    <fullName>Paycheck_1_Amount__c</fullName>
    <description>Amount of clawback from rep's paycheck</description>
    <inlineHelpText>Amount of clawback from rep's paycheck</inlineHelpText>
    <label>Margin Retraction 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>