unpackaged/main/default/objects/FPC_Proceeds__c/recordTypes/Broker.recordType-meta.xml
<RecordType>
    <fullName>Broker</fullName>
    <active>true</active>
    <label>Broker</label>
</RecordType>