unpackaged/main/default/objects/FPC_Proceeds__c/recordTypes/External_Lender.recordType-meta.xml
<RecordType>
    <fullName>External_Lender</fullName>
    <active>true</active>
    <label>External Lender</label>
</RecordType>